Rate on date new design

--- a/app/src/main/res/layout/er_fragment_chart_rates.xml
+++ b/app/src/main/res/layout/er_fragment_chart_rates.xml
@@ -17,7 +17,7 @@
             android:layout_height="match_parent"
             android:clipChildren="false"
             android:clipToPadding="false"
-            tools:context=".views.fragments.CurrentRatesFragment">
+            tools:context=".views.fragments.ChartRatesFragment">
 
         <LinearLayout
                 style="@style/Widget.ExRates.Backdrop"
