--- a/app/src/main/res/layout/dialog_add_currency.xml
+++ b/app/src/main/res/layout/dialog_add_currency.xml
@@ -21,7 +21,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/er_backdrop_bg"
-                android:padding="16dp">
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingTop="24dp"
+                android:paddingBottom="24dp">
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
