--- a/app/src/main/res/layout/rv_item_ingot.xml
+++ b/app/src/main/res/layout/rv_item_ingot.xml
@@ -46,7 +46,7 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.083"
-                    tools:text="American dollar" />
+                    tools:text="Gold" />
 
 
             <TextView
